<resources>
    <string name="app_name">Food Shop App</string>
    <string name="title">FoodShop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_login">Login</string>
    <string name="signup">Don\'t Have An Account? SignUp</string>
    <string name="login">Do you have an account? Login</string>
    <string name="forget_password">Forget Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="recovery_password">Recovery password</string>
</resources>